--- a/config/database.yml
+++ b/config/database.yml
@@ -26,13 +26,13 @@ default: &default
 
 development:
   <<: *default
-  database: twowheeler_backend_app_development
+  database: QuickMaths_BackEnd_development
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
   # When left blank, postgres will use the default role. This is
   # the same name as the operating system user running Rails.
-  #username: twowheeler_backend_app
+  #username: QuickMaths_BackEnd
 
   # The password associated with the postgres role (username).
   #password:
@@ -60,7 +60,7 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: twowheeler_backend_app_test
+  database: QuickMaths_BackEnd_test
 
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
@@ -84,6 +84,6 @@ test:
 #
 production:
   <<: *default
-  database: twowheeler_backend_app_production
-  username: twowheeler_backend_app
-  password: <%= ENV["TWOWHEELER_BACKEND_APP_DATABASE_PASSWORD"] %>
+  database: QuickMaths_BackEnd_production
+  username: QuickMaths_BackEnd
+  password: <%= ENV["QUICKMATHS_BACKEND_DATABASE_PASSWORD"] %>
